Homepage Header edits.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Page title -->
-    <title>HOMER | WebApp admin theme</title>
+    <title>Home | PAYUCA GmbH</title>
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!--<link rel="shortcut icon" type="image/ico" href="favicon.ico" />-->
@@ -41,9 +41,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="index.html" class="navbar-brand">HOMER</a>
+            <a href="index.html" class="navbar-brand">PAYUCA</a>
             <div class="brand-desc">
-                Landing page for Homer app
+                Smart Parking
             </div>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
@@ -63,26 +63,23 @@
 <header id="page-top">
     <div class="container">
         <div class="heading">
-            <h1>
-                Welcome to Homer landing page
-            </h1>
-            <span>Contrary to popular belief, Lorem Ipsum is not<br/> simply random text for print.</span>
-            <p class="small">
-                Lorem Ipsum is simply dummy text of the printing and tLorem Ipsum is  Lorem Ipsum is simply dummy of the simply dummy text of the ypesetting.
-            </p>
-            <a href="#" class="btn btn-success btn-sm">Learn more</a>
+            <h1>PAYUCA Smart Parking</h1>
+            <h3>affordable & safe parking</h3>
+            <br />
+            <h4>
+                PAYUCA is an all-in-one solution which <br />
+                revolutionizes the relationship between <br />
+                parking spots and drivers.
+            </h4>
+            <br />
+            <h4>Download now:</h4>
+            <br />
+            <a href="https://itunes.apple.com/at/app/payuca-smart-parking/id1064020147?l=en&mt=8" class="btn btn-success btn-lg" style="margin-right: 2%;">Apple App Store</a>
+            <a href="https://play.google.com/store/apps/details?id=com.payuca.android&hl=en" class="btn btn-success btn-lg">Google Play Store</a>
         </div>
         <div class="heading-image animate-panel" data-child="img-animate" data-effect="fadeInRight">
-            <p class="small">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <img class="img-animate" src="images/landing/c1.jpg">
-            <img class="img-animate" src="images/landing/c2.jpg">
-            <img class="img-animate" src="images/landing/c3.jpg">
-            <img class="img-animate" src="images/landing/c4.jpg">
-            <br/>
-            <img class="img-animate" src="images/landing/c5.jpg">
-            <img class="img-animate" src="images/landing/c6.jpg">
-            <img class="img-animate" src="images/landing/c7.jpg">
-            <img class="img-animate" src="images/landing/c8.jpg">
+            <p></p>
+            <img class="img-animate" src="images/landing/showcase.png">
         </div>
     </div>
 </header>
