App ad finished (EN version).

--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
                 parking spots and drivers.
             </h4>
             <br />
-            <h4>Download now:</h4>
-            <br />
-            <a href="https://itunes.apple.com/at/app/payuca-smart-parking/id1064020147?l=en&mt=8" class="btn btn-success btn-lg" style="margin-right: 2%;">Apple App Store</a>
-            <a href="https://play.google.com/store/apps/details?id=com.payuca.android&hl=en" class="btn btn-success btn-lg">Google Play Store</a>
+            <h4>Download now</h4>
+            <a href="https://itunes.apple.com/at/app/payuca-smart-parking/id1064020147?l=en&mt=8" style="margin-right: 1%;"><img src="images/landing/app-store-badge.png" alt="iOS App Download" /></a>
+            <a href="https://play.google.com/store/apps/details?id=com.payuca.android&hl=en"><img src="images/landing/google-play-badge.png" alt="Android App Download" /></a>
         </div>
         <div class="heading-image animate-panel" data-child="img-animate" data-effect="fadeInRight">
             <p></p>
