--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         </div>
     </div>
 </header>
+
 <section class="features">
     <div class="container">
     <div class="row center">
@@ -224,7 +225,7 @@
                         auf Anfrage-NFC Chip €2,70
                     </li>
                     <li class="pricing-title">
-                        <h2><span class="text-success">€</span> / Monat</h2>
+                        <a class="btn btn-primary" href="#">Kontakt</a>
                     </li>
                 </ul>
             </div>
@@ -264,7 +265,7 @@
                 <h2><span class="text-success">Special icons </span>for your app</h2>
                 <p>Lorem Ipsum available, but the majority have suffered alteration euismod. </p>
             </div>
-            <div class="col-md-3 m-t-md">
+            <div class="col-md-3 m-t">
               <a href="https://itunes.apple.com/at/app/payuca-smart-parking/id1064020147?l=en&mt=8" style="margin-right: 1%;"><img src="images/landing/app-store-badge.png" alt="iOS App Download" /></a>
               <a href="https://play.google.com/store/apps/details?id=com.payuca.android&hl=en"><img src="images/landing/google-play-badge.png" alt="Android App Download" /></a>
             </div>
@@ -284,54 +285,73 @@
         </div>
 
         <div class="row m-t-lg text-center">
-            <div class="col-sm-4">
+            <div class="col-sm-4 m-t-lg">
                 <div class="team-member">
-                    <img src="images/a2.jpg" class="img-circle img-small" alt="">
-                    <h4><span>User</span> name</h4>
-                    <p>Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus. </p>
-
+                    <img src="images/a2.jpg" class="img-circle" alt="">
+                    <h4><span class="text-success">Andreas</span> Lichtl</h4>
+                    <p>Geschäftsführer </p>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 m-t-lg">
                 <div class="team-member">
-                    <img src="images/a5.jpg" class="img-circle" alt="">
-                    <h4><span>User</span> name</h4>
-                    <p>Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.</p>
-
+                    <img src="images/a2.jpg" class="img-circle" alt="">
+                    <h4><span class="text-success">Dominik</span>  Wegmayer</h4>
+                    <p>Geschäftsführer </p>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 m-t-lg">
                 <div class="team-member">
-                    <img src="images/a3.jpg" class="img-circle img-small" alt="">
-                    <h4><span>User</span> name</h4>
-                    <p>Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.</p>
-
+                    <img src="images/a2.jpg" class="img-circle" alt="">
+                    <h4><span class="text-success">Viktor</span> Schaider</h4>
+                    <p>Operations </p>
                 </div>
             </div>
         </div>
+
         <div class="row m-t-lg text-center">
-            <div class="col-sm-4">
+            <div class="col-sm-4 m-t-lg">
                 <div class="team-member">
-                    <img src="images/a7.jpg" class="img-circle img-small" alt="">
-                    <h4><span>User</span> name</h4>
-                    <p>Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus. </p>
-
+                    <img src="images/a2.jpg" class="img-circle" alt="">
+                    <h4><span class="text-success">Markus</span> Müllegger</h4>
+                    <p>Gesellschafter </p>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 m-t-lg">
                 <div class="team-member">
-                    <img src="images/a8.jpg" class="img-circle" alt="">
-                    <h4><span>User</span> name</h4>
-                    <p>Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.</p>
-
+                    <img src="images/a2.jpg" class="img-circle" alt="">
+                    <h4><span class="text-success">Zeljko</span> Savic</h4>
+                    <p>Leitung Produktentwicklung </p>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 m-t-lg">
                 <div class="team-member">
-                    <img src="images/a9.jpg" class="img-circle img-small" alt="">
-                    <h4><span>User</span> name</h4>
-                    <p>Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.</p>
+                    <img src="images/a2.jpg" class="img-circle" alt="">
+                    <h4><span class="text-success">Djordje</span> Savanovic</h4>
+                    <p>UI/UX Designer </p>
+                </div>
+            </div>
+        </div>
 
+        <div class="row m-t-lg text-center">
+            <div class="col-sm-4 m-t-lg">
+                <div class="team-member">
+                    <img src="images/a2.jpg" class="img-circle" alt="">
+                    <h4><span class="text-success">Sasa</span> Calic</h4>
+                    <p>Back-End Developer </p>
+                </div>
+            </div>
+            <div class="col-sm-4 m-t-lg">
+                <div class="team-member">
+                    <img src="images/a2.jpg" class="img-circle" alt="">
+                    <h4><span class="text-success">Patricia</span> Eckert</h4>
+                    <p>Leitung Operations </p>
+                </div>
+            </div>
+            <div class="col-sm-4 m-t-lg">
+                <div class="team-member">
+                    <img src="images/a2.jpg" class="img-circle" alt="">
+                    <h4><span class="text-success">Karin</span> Casapiccola</h4>
+                    <p>Office Allrounder </p>
                 </div>
             </div>
         </div>
@@ -339,51 +359,6 @@
     </div>
 </section>
 
-<section id="clients">
-    <div class="container">
-        <div class="row text-center">
-            <div class="col-md-6 col-md-offset-3">
-                <h2><span class="text-success">Our best</span> clients</h2>
-                <p>
-                    Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes.
-                </p>
-            </div>
-        </div>
-
-        <div class="row text-center m-t-lg">
-            <div class="col-md-6 col-md-offset-3">
-
-                <div class="row">
-
-                    <div class="col-md-6">
-                        <div class="client">Company logo</div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="client">Company logo</div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="client">Company logo</div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="client">Company logo</div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="client">Company logo</div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="client">Company logo</div>
-                    </div>
-
-                </div>
-
-
-            </div>
-
-        </div>
-
-
-    </div>
-</section>
 <section id="contact" class="bg-light">
     <div class="container">
         <div class="row text-center">
@@ -396,7 +371,14 @@
         </div>
 
         <div class="row text-center m-t-lg">
-            <div class="col-md-4 col-md-offset-3">
+          <div class="col-md-4 text-left">
+              <a href=""><h4 class="footermenu">Home</h4></a>
+              <a href=""><h4 class="footermenu">Home</h4></a>
+              <a href=""><h4 class="footermenu">Home</h4></a>
+              <a href=""><h4 class="footermenu-last">Home</h4></a>
+          </div>
+
+            <div class="col-md-4">
 
                 <form class="form-horizontal" role="form" method="post" action="#">
                     <div class="form-group">
@@ -428,7 +410,7 @@
                 </form>
 
             </div>
-            <div class="col-md-3 text-left">
+            <div class="col-md-4 text-left">
                 <address>
                     <strong><span class="navy">Company name, Inc.</span></strong><br/>
                     601 Street name, 123<br/>
@@ -444,6 +426,16 @@
 
     </div>
 </section>
+
+<div id="footer">
+  <div class="container">
+    <div class="row text-center">
+        <div class="col-lg-12">
+              Copyright © PAYUCA GmbH 2018
+        </div>
+    </div>
+  </div>
+</div>
 
 <!-- Vendor scripts -->
 <script src="vendor/jquery/dist/jquery.min.js"></script>
