--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a class="page-scroll" href="#page-top">Home</a></li>
-                <li><a class="page-scroll" page-scroll href="#components">UI</a></li>
-                <li><a class="page-scroll" page-scroll href="#features">Features</a></li>
+                <li><a class="page-scroll" page-scroll href="#sogehts">So geht's</a></li>
+                <li><a class="page-scroll" page-scroll href="#pricing">Preis</a></li>
                 <li><a class="page-scroll" page-scroll href="#team">Team</a></li>
-                <li><a class="page-scroll" page-scroll href="#pricing">Pricing </a></li>
-                <li><a class="page-scroll" page-scroll href="#clients">Clients </a></li>
-                <li><a class="page-scroll" page-scroll href="#contact">Contact</a></li>
+                <li><a class="page-scroll" page-scroll href="#kontakt">Kontakt</a></li>
             </ul>
         </div>
     </div>
@@ -97,7 +95,7 @@
     </div>
 </section>
 
-<section id="components" class="bg-light">
+<section id="sogehts" class="bg-light">
     <div class="container">
       <div class="row text-center">
           <div class="col-lg-12">
@@ -359,7 +357,7 @@
     </div>
 </section>
 
-<section id="contact" class="bg-light">
+<section id="kontakt" class="bg-light">
     <div class="container">
         <div class="row text-center">
             <div class="col-md-6 col-md-offset-3">
@@ -377,6 +375,20 @@
               <a href=""><h4 class="footermenu">Home</h4></a>
               <a href=""><h4 class="footermenu-last">Home</h4></a>
           </div>
+
+            <div class="col-md-4 text-left">
+
+              <address>
+                  <strong><span class="navy">Company name, Inc.</span></strong><br/>
+                  601 Street name, 123<br/>
+                  New York, De 34101<br/>
+                  <abbr title="Phone">P:</abbr> (123) 678-8674
+              </address>
+              <p class="text-color">
+                  Consectetur adipisicing elit. Aut eaque, totam corporis laboriosam veritatis quis ad perspiciatis, totam corporis laboriosam veritatis, consectetur adipisicing elit quos non quis ad perspiciatis, totam corporis ea,
+              </p>
+
+            </div>
 
             <div class="col-md-4">
 
@@ -409,17 +421,6 @@
                     </div>
                 </form>
 
-            </div>
-            <div class="col-md-4 text-left">
-                <address>
-                    <strong><span class="navy">Company name, Inc.</span></strong><br/>
-                    601 Street name, 123<br/>
-                    New York, De 34101<br/>
-                    <abbr title="Phone">P:</abbr> (123) 678-8674
-                </address>
-                <p class="text-color">
-                    Consectetur adipisicing elit. Aut eaque, totam corporis laboriosam veritatis quis ad perspiciatis, totam corporis laboriosam veritatis, consectetur adipisicing elit quos non quis ad perspiciatis, totam corporis ea,
-                </p>
             </div>
         </div>
 
