--- a/index.html
+++ b/index.html
@@ -370,10 +370,11 @@
 
         <div class="row text-center m-t-lg">
           <div class="col-md-4 text-left">
-              <a href=""><h4 class="footermenu">Home</h4></a>
-              <a href=""><h4 class="footermenu">Home</h4></a>
-              <a href=""><h4 class="footermenu">Home</h4></a>
-              <a href=""><h4 class="footermenu-last">Home</h4></a>
+              <a href="#page-top" class="page-scroll"><h4 class="footermenu">Home</h4></a>
+              <a href="#sogehts" class="page-scroll"><h4 class="footermenu">So geht's</h4></a>
+              <a href="#pricing" class="page-scroll"><h4 class="footermenu">Preis</h4></a>
+              <a href="#team" class="page-scroll"><h4 class="footermenu">Team</h4></a>
+              <a href="#kontakt" class="page-scroll"><h4 class="footermenu-last">Kontakt</h4></a>
           </div>
 
             <div class="col-md-4 text-left">
