--- a/index.html
+++ b/index.html
@@ -369,25 +369,37 @@
         </div>
 
         <div class="row text-center m-t-lg">
-          <div class="col-md-4 text-left">
-              <a href="#page-top" class="page-scroll"><h4 class="footermenu">Home</h4></a>
-              <a href="#sogehts" class="page-scroll"><h4 class="footermenu">So geht's</h4></a>
-              <a href="#pricing" class="page-scroll"><h4 class="footermenu">Preis</h4></a>
-              <a href="#team" class="page-scroll"><h4 class="footermenu">Team</h4></a>
-              <a href="#kontakt" class="page-scroll"><h4 class="footermenu-last">Kontakt</h4></a>
-          </div>
+
+          <div class="col-md-4 text-center about">
+
+              <a href="https://www.payuca.com/">
+              <img src="images/landing/payucaLogo.png" class="footerlogo" alt="PAYUCA Logo" />
+              </a>
+
+              <address>
+                  <strong><span class="navy">PAYUCA GmbH</span></strong><br/>
+                  Wipplingerstraße 32/2/22<br/>
+                  1010 Wien, Österreich<br/>
+                  Email: <a href="mailto:office@payuca.com">office@payuca.com</a> <br/>
+                  Telefon: <a href="tel:+4313075622">+43 1 307 5622 </a> <br/>
+              </address>
+
+              <p class="text-color">
+                  <button class="btn btn-primary btn-circle" type="button"><i class="fa fa-facebook"></i></button>
+                  <button class="btn btn-primary btn-circle" type="button"><i class="fa fa-twitter"></i></button>
+                  <button class="btn btn-primary btn-circle" type="button"><i class="fa fa-linkedin"></i></button>
+                  <button class="btn btn-primary btn-circle" type="button"><i class="fa fa-instagram"></i></button>
+              </p>
+
+            </div>
 
             <div class="col-md-4 text-left">
 
-              <address>
-                  <strong><span class="navy">Company name, Inc.</span></strong><br/>
-                  601 Street name, 123<br/>
-                  New York, De 34101<br/>
-                  <abbr title="Phone">P:</abbr> (123) 678-8674
-              </address>
-              <p class="text-color">
-                  Consectetur adipisicing elit. Aut eaque, totam corporis laboriosam veritatis quis ad perspiciatis, totam corporis laboriosam veritatis, consectetur adipisicing elit quos non quis ad perspiciatis, totam corporis ea,
-              </p>
+                <a href="#page-top" class="page-scroll"><h4 class="footermenu">Home</h4></a>
+                <a href="#sogehts" class="page-scroll"><h4 class="footermenu">So geht's</h4></a>
+                <a href="#pricing" class="page-scroll"><h4 class="footermenu">Preis</h4></a>
+                <a href="#team" class="page-scroll"><h4 class="footermenu">Team</h4></a>
+                <a href="#kontakt" class="page-scroll"><h4 class="footermenu-last">Kontakt</h4></a>
 
             </div>
 
