--- a/agb.html
+++ b/agb.html
@@ -40,11 +40,11 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a class="page-scroll" href="#page-top">Home</a></li>
-                <li><a class="page-scroll" page-scroll href="#sogehts">So geht's</a></li>
-                <li><a class="page-scroll" page-scroll href="#pricing">Preis</a></li>
-                <li><a class="page-scroll" page-scroll href="#team">Team</a></li>
-                <li><a class="page-scroll" page-scroll href="#kontakt">Kontakt</a></li>
+                <li><a class="page-scroll" href="index.html#page-top">Home</a></li>
+                <li><a class="page-scroll" page-scroll href="index.html#sogehts">So geht's</a></li>
+                <li><a class="page-scroll" page-scroll href="index.html#pricing">Preis</a></li>
+                <li><a class="page-scroll" page-scroll href="index.html#team">Team</a></li>
+                <li><a class="page-scroll" page-scroll href="index.html#kontakt">Kontakt</a></li>
             </ul>
         </div>
     </div>
