--- a/search.html
+++ b/search.html
@@ -108,7 +108,7 @@
                         <h3 class="m-t-none m-b-none">Haven't found what You're looking for?</h3>
                         <p>Feel free to submit a support ticket by clicking the button down below.</p>
 
-                        <button class="btn btn-primary btn-lg" type="button"><i class="fa fa-ticket"></i> Submit a ticket</button>
+                        <button class="btn btn-primary btn-lg m-t-md" type="button"><i class="fa fa-ticket"></i> Submit a ticket</button>
                     </div>
                 </div>
             </div>
