--- a/impressum.html
+++ b/impressum.html
@@ -52,8 +52,8 @@
 
 <section id="agb" class="bg-light agb">
     <div class="container">
-
-      <div class="col-lg-12">
+      <div class="row">
+        <div class="col-lg-12">
                 <div class="hpanel blog-article-box">
                     <div class="panel-heading">
                         <h4>Impressum </h4>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </div>
-
+      </div>
     </div>
 </section>
 
@@ -217,10 +217,15 @@
 
 <div id="footer" class="bg-light">
   <div class="container">
-    <div class="row text-center">
-        <div class="col-lg-12">
-              Copyright © PAYUCA GmbH 2018
-        </div>
+    <div class="row">
+        <span class="pull-right">
+            <a href="index.html">Home</a> |
+            <a href="agb.html">AGB</a> |
+            <a href="datenschutz.html">Datenschutz</a> |
+            <a href="impressum.html">Impressum</a> |
+            <a href="faq.html">FAQ</a>
+        </span>
+        Copyright © PAYUCA GmbH 2018
     </div>
   </div>
 </div>
