--- a/ticket.html
+++ b/ticket.html
@@ -236,10 +236,15 @@
 
 <div id="footer" class="bg-light">
   <div class="container">
-    <div class="row text-center">
-        <div class="col-lg-12">
-              Copyright © PAYUCA GmbH 2018
-        </div>
+    <div class="row">
+        <span class="pull-right">
+            <a href="index.html">Home</a> |
+            <a href="agb.html">AGB</a> |
+            <a href="datenschutz.html">Datenschutz</a> |
+            <a href="impressum.html">Impressum</a> |
+            <a href="faq.html">FAQ</a>
+        </span>
+        Copyright © PAYUCA GmbH 2018
     </div>
   </div>
 </div>
