--- a/index.html
+++ b/index.html
@@ -441,12 +441,24 @@
     </div>
 </section>
 
+<footer class="footer">
+        <span class="pull-right">
+            Example text
+        </span>
+        Company 2015-2020
+    </footer>
+
 <div id="footer">
   <div class="container">
-    <div class="row text-center">
-        <div class="col-lg-12">
-              Copyright © PAYUCA GmbH 2018
-        </div>
+    <div class="row">
+        <span class="pull-right">
+            <a href="index.html">Home</a> |
+            <a href="agb.html">AGB</a> |
+            <a href="datenschutz.html">Datenschutz</a> |
+            <a href="impressum.html">Impressum</a> |
+            <a href="faq.html">FAQ</a>
+        </span>
+        Copyright © PAYUCA GmbH 2018
     </div>
   </div>
 </div>
