--- a/standorte.html
+++ b/standorte.html
@@ -78,7 +78,17 @@
 
         <ul class="nav" id="side-menu">
             <li>
-                <a href="index.html"> <span class="nav-label">Dashboard</span> <span class="label label-success pull-right">v.1</span> </a>
+                <div class="row p-xs">
+                  <div class="col-lg-12">
+                    <h4>Garage Gasometer</h4>
+                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                  </div>
+                </div>
+                <div class="row p-xs m-t-n m-b">
+                  <div class="col-lg-12">
+                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                  </div>
+                </div>
             </li>
             <li>
                 <a href="analytics.html"> <span class="nav-label">Analytics</span><span class="label label-warning pull-right">NEW</span> </a>
@@ -156,7 +166,7 @@
       function initMap() {
         var uluru = {lat: 48.214046, lng: 16.367354};
         var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 14,
+          zoom: 12,
           center: uluru,
           gestureHandling: 'cooperative'
         });
