--- a/standorte.html
+++ b/standorte.html
@@ -80,7 +80,7 @@
             <li>
                 <div class="row p-xs">
                   <div class="col-lg-12">
-                    <h4>Garage Gasometer</h4>
+                    <a href=""><h4>Garage Gasometer</h4></a>
                     <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
                   </div>
                 </div>
@@ -90,44 +90,103 @@
                   </div>
                 </div>
             </li>
+
             <li>
-                <a href="analytics.html"> <span class="nav-label">Analytics</span><span class="label label-warning pull-right">NEW</span> </a>
+                <div class="row p-xs">
+                  <div class="col-lg-12">
+                    <a href=""><h4>Garage Gasometer</h4></a>
+                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                  </div>
+                </div>
+                <div class="row p-xs m-t-n m-b">
+                  <div class="col-lg-12">
+                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                  </div>
+                </div>
             </li>
+
             <li>
-                <a href="#"><span class="nav-label">Interface</span><span class="fa arrow"></span> </a>
+                <div class="row p-xs">
+                  <div class="col-lg-12">
+                    <a href=""><h4>Garage Gasometer</h4></a>
+                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                  </div>
+                </div>
+                <div class="row p-xs m-t-n m-b">
+                  <div class="col-lg-12">
+                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                  </div>
+                </div>
             </li>
+
             <li>
-                <a href="#"><span class="nav-label">App views</span><span class="fa arrow"></span> </a>
+                <div class="row p-xs">
+                  <div class="col-lg-12">
+                    <a href=""><h4>Garage Gasometer</h4></a>
+                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                  </div>
+                </div>
+                <div class="row p-xs m-t-n m-b">
+                  <div class="col-lg-12">
+                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                  </div>
+                </div>
             </li>
+
             <li>
-                <a href="#"><span class="nav-label">Charts</span><span class="fa arrow"></span> </a>
+                <div class="row p-xs">
+                  <div class="col-lg-12">
+                    <a href=""><h4>Garage Gasometer</h4></a>
+                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                  </div>
+                </div>
+                <div class="row p-xs m-t-n m-b">
+                  <div class="col-lg-12">
+                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                  </div>
+                </div>
             </li>
+
             <li>
-                <a href="#"><span class="nav-label">Box transitions</span><span class="fa arrow"></span> </a>
+                <div class="row p-xs">
+                  <div class="col-lg-12">
+                    <a href=""><h4>Garage Gasometer</h4></a>
+                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                  </div>
+                </div>
+                <div class="row p-xs m-t-n m-b">
+                  <div class="col-lg-12">
+                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                  </div>
+                </div>
             </li>
+
             <li>
-                <a href="#"><span class="nav-label">Common views</span><span class="fa arrow"></span> </a>
+                <div class="row p-xs">
+                  <div class="col-lg-12">
+                    <a href=""><h4>Garage Gasometer</h4></a>
+                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                  </div>
+                </div>
+                <div class="row p-xs m-t-n m-b">
+                  <div class="col-lg-12">
+                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                  </div>
+                </div>
             </li>
+
             <li>
-                <a href="#"><span class="nav-label">Tables</span><span class="fa arrow"></span> </a>
-            </li>
-            <li>
-                <a href="widgets.html"> <span class="nav-label">Widgets</span> <span class="label label-success pull-right">Special</span></a>
-            </li>
-            <li>
-                <a href="#"><span class="nav-label">Forms</span><span class="fa arrow"></span> </a>
-            </li>
-            <li>
-                <a href="options.html"> <span class="nav-label">Layout options</span></a>
-            </li>
-            <li>
-                <a href="grid_system.html"> <span class="nav-label">Grid system</span></a>
-            </li>
-            <li>
-                <a href="landing_page.html"> <span class="nav-label">Landing page</span></a>
-            </li>
-            <li>
-                <a href="package.html"> <span class="nav-label">Package</span></a>
+                <div class="row p-xs">
+                  <div class="col-lg-12">
+                    <a href=""><h4>Garage Gasometer</h4></a>
+                    <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
+                  </div>
+                </div>
+                <div class="row p-xs m-t-n m-b">
+                  <div class="col-lg-12">
+                      Höhe: 3,1 m | Innen | Barrierefrei | Videoüberwachung
+                  </div>
+                </div>
             </li>
 
         </ul>
