--- a/standorte.html
+++ b/standorte.html
@@ -25,8 +25,8 @@
 
     <style>
        #map {
-        min-height: 867px;
-        max-height: 100% !important;
+        min-height: 91vh;
+        max-height: 0 !important;
        }
     </style>
 
@@ -199,9 +199,7 @@
     <div class="content">
         <div class="row">
             <div class="col-lg-12">
-
               <div id="map"></div>
-
             </div>
         </div>
     </div>
