--- a/standorte.html
+++ b/standorte.html
@@ -29,7 +29,7 @@
 <!-- Header -->
 <div id="header">
     <nav role="navigation" class="navbar navbar-default navbar-fixed-top">
-      <div class="col-lg-12">
+      <div class="col-lg-12" style="padding-right: 25px;">
           <div class="navbar-header">
               <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
                   <span class="sr-only">Toggle navigation</span>
@@ -70,7 +70,7 @@
         </div>
 
         <ul class="nav" id="side-menu">
-            <li>
+            <li class="garage">
                 <div class="row p-xs">
                   <div class="col-lg-12">
                     <a href=""><h4>Garage Gasometer</h4></a>
@@ -84,7 +84,7 @@
                 </div>
             </li>
 
-            <li>
+            <li class="garage">
                 <div class="row p-xs">
                   <div class="col-lg-12">
                     <a href=""><h4>Garage Gasometer</h4></a>
@@ -98,7 +98,7 @@
                 </div>
             </li>
 
-            <li>
+            <li class="garage">
                 <div class="row p-xs">
                   <div class="col-lg-12">
                     <a href=""><h4>Garage Gasometer</h4></a>
@@ -112,7 +112,7 @@
                 </div>
             </li>
 
-            <li>
+            <li class="garage">
                 <div class="row p-xs">
                   <div class="col-lg-12">
                     <a href=""><h4>Garage Gasometer</h4></a>
@@ -126,7 +126,7 @@
                 </div>
             </li>
 
-            <li>
+            <li class="garage">
                 <div class="row p-xs">
                   <div class="col-lg-12">
                     <a href=""><h4>Garage Gasometer</h4></a>
@@ -140,7 +140,7 @@
                 </div>
             </li>
 
-            <li>
+            <li class="garage">
                 <div class="row p-xs">
                   <div class="col-lg-12">
                     <a href=""><h4>Garage Gasometer</h4></a>
@@ -154,7 +154,7 @@
                 </div>
             </li>
 
-            <li>
+            <li class="garage">
                 <div class="row p-xs">
                   <div class="col-lg-12">
                     <a href=""><h4>Garage Gasometer</h4></a>
@@ -168,7 +168,7 @@
                 </div>
             </li>
 
-            <li>
+            <li class="garage">
                 <div class="row p-xs">
                   <div class="col-lg-12">
                     <a href=""><h4>Garage Gasometer</h4></a>
@@ -197,7 +197,7 @@
     </head>
 
     <body onload="initMap()">
-      <div class="content">
+      <div class="content hidden-sm-down">
         <div class="mapcontainer">
           <div>
             <div id="map-canvas"></div>
