Footer fix. Centered when col-xs.

--- a/partner.html
+++ b/partner.html
@@ -250,6 +250,7 @@
 <div id="footer" class="bg-light">
   <div class="container">
     <div class="row">
+      <div class="col-xs-12 text-left">
         <span class="pull-right">
             <a href="index.html">Home</a> |
             <a href="agb.html">AGB</a> |
@@ -258,6 +259,7 @@
             <a href="faq.html">FAQ</a>
         </span>
         Copyright © PAYUCA GmbH 2018
+      </div>
     </div>
   </div>
 </div>
