--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
             <a href="index.html"><img src="images/landing/payucaLogo.png" class="logo" alt="PAYUCA Logo" /></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a class="page-scroll" href="#page-top">Home</a></li>
-                <li><a class="page-scroll" page-scroll href="#sogehts">So geht's</a></li>
-                <li><a class="page-scroll" page-scroll href="#pricing">Preis</a></li>
-                <li><a class="page-scroll" page-scroll href="#team">Team</a></li>
-                <li><a class="page-scroll" page-scroll href="#kontakt">Kontakt</a></li>
-            </ul>
+          <ul class="nav navbar-nav navbar-right">
+              <li class="active"><a class="page-scroll" href="index.html#page-top">Home</a></li>
+              <li><a class="page-scroll" page-scroll href="index.html#sogehts">So geht's</a></li>
+              <li><a class="page-scroll" page-scroll href="index.html#pricing">Preis</a></li>
+              <li><a class="page-scroll" page-scroll href="index.html#team">Team</a></li>
+              <li><a href="standorte.html">Standorte</a></li>
+              <li><a href="partner.html">Partner</a></li>
+              <li><a class="page-scroll" page-scroll href="index.html#kontakt">Kontakt</a></li>
+          </ul>
         </div>
     </div>
 </nav>
@@ -395,16 +397,18 @@
 
             <div class="col-md-4 text-left">
 
-                <a href="#page-top" class="page-scroll"><h4 class="footermenu">Home</h4></a>
-                <a href="#sogehts" class="page-scroll"><h4 class="footermenu">So geht's</h4></a>
-                <a href="#pricing" class="page-scroll"><h4 class="footermenu">Preis</h4></a>
-                <a href="#team" class="page-scroll"><h4 class="footermenu">Team</h4></a>
-                <a href="#kontakt" class="page-scroll"><h4 class="footermenu-last">Kontakt</h4></a>
+                <a href="index.html#page-top" class="page-scroll"><h4 class="footermenu">Home</h4></a>
+                <a href="index.html#sogehts" class="page-scroll"><h4 class="footermenu">So geht's</h4></a>
+                <a href="index.html#pricing" class="page-scroll"><h4 class="footermenu">Preis</h4></a>
+                <a href="index.html#team" class="page-scroll"><h4 class="footermenu">Team</h4></a>
+                <a href="standorte.html"><h4 class="footermenu">Standorte</h4></a>
+                <a href="partner.html"><h4 class="footermenu">Partner</h4></a>
+                <a href="index.html#kontakt" class="page-scroll"><h4 class="footermenu-last">Kontakt</h4></a>
 
             </div>
 
             <div class="col-md-4">
-
+              <h4 class="text-center text-success">Kontakt</h4>
                 <form class="form-horizontal" role="form" method="post" action="#">
                     <div class="form-group">
                         <label for="name" class="col-sm-2 control-label">Name</label>
@@ -444,6 +448,7 @@
 <div id="footer">
   <div class="container">
     <div class="row">
+      <div class="col-xs-12 text-left">
         <span class="pull-right">
             <a href="index.html">Home</a> |
             <a href="agb.html">AGB</a> |
@@ -452,6 +457,7 @@
             <a href="faq.html">FAQ</a>
         </span>
         Copyright © PAYUCA GmbH 2018
+      </div>
     </div>
   </div>
 </div>
