--- a/faq.html
+++ b/faq.html
@@ -44,6 +44,8 @@
                 <li><a class="page-scroll" page-scroll href="index.html#sogehts">So geht's</a></li>
                 <li><a class="page-scroll" page-scroll href="index.html#pricing">Preis</a></li>
                 <li><a class="page-scroll" page-scroll href="index.html#team">Team</a></li>
+                <li><a href="standorte.html">Standorte</a></li>
+                <li><a href="partner.html">Partner</a></li>
                 <li><a class="page-scroll" page-scroll href="index.html#kontakt">Kontakt</a></li>
             </ul>
         </div>
@@ -280,16 +282,18 @@
 
             <div class="col-md-4 text-left">
 
-                <a href="#page-top" class="page-scroll"><h4 class="footermenu">Home</h4></a>
-                <a href="#sogehts" class="page-scroll"><h4 class="footermenu">So geht's</h4></a>
-                <a href="#pricing" class="page-scroll"><h4 class="footermenu">Preis</h4></a>
-                <a href="#team" class="page-scroll"><h4 class="footermenu">Team</h4></a>
-                <a href="#kontakt" class="page-scroll"><h4 class="footermenu-last">Kontakt</h4></a>
+                <a href="index.html#page-top" class="page-scroll"><h4 class="footermenu">Home</h4></a>
+                <a href="index.html#sogehts" class="page-scroll"><h4 class="footermenu">So geht's</h4></a>
+                <a href="index.html#pricing" class="page-scroll"><h4 class="footermenu">Preis</h4></a>
+                <a href="index.html#team" class="page-scroll"><h4 class="footermenu">Team</h4></a>
+                <a href="standorte.html"><h4 class="footermenu">Standorte</h4></a>
+                <a href="partner.html"><h4 class="footermenu">Partner</h4></a>
+                <a href="index.html#kontakt" class="page-scroll"><h4 class="footermenu-last">Kontakt</h4></a>
 
             </div>
 
             <div class="col-md-4">
-
+              <h4 class="text-center text-success">Kontakt</h4>
                 <form class="form-horizontal" role="form" method="post" action="#">
                     <div class="form-group">
                         <label for="name" class="col-sm-2 control-label">Name</label>
@@ -329,6 +333,7 @@
 <div id="footer" class="bg-light">
   <div class="container">
     <div class="row">
+      <div class="col-xs-12 text-left">
         <span class="pull-right">
             <a href="index.html">Home</a> |
             <a href="agb.html">AGB</a> |
@@ -337,6 +342,7 @@
             <a href="faq.html">FAQ</a>
         </span>
         Copyright © PAYUCA GmbH 2018
+      </div>
     </div>
   </div>
 </div>
