--- a/agb.html
+++ b/agb.html
@@ -324,6 +324,31 @@
                         <p>XXV.3.</p>   <p style="margin-left: 30px;">Erfolgt eine Mitteilung über die Änderung dieser allgemeinen Geschäftsbedingungen gemeinsam mit dem Hinweis auf ein Update, kann der Kunde nur beides zugleich akzeptieren.</p>
                         <p>XXV.4.</p>   <p style="margin-left: 30px;">Eine Änderung dieser allgemeinen Geschäftsbedingungen gilt ab dem Zeitpunkt der Annahme durch den Kunden für sämtliche zukünftigen Mietverträge.</p>
 
+                        <h3 class="m-t-lg">XXVI SCHLUSSBESTIMMUNGEN</h3>
+                        <p>XXVI.1.</p>   <p style="margin-left: 30px;">Der Bestand dieser allgemeinen Geschäftsbedingungen oder eines zwischen PAYUCA und dem Kunden geschlossenen Mietvertrages wird durch die Unwirksamkeit einzelner Bestimmungen nicht berührt. Eine unwirksame Bestimmung ist von den Vertragsparteien durch eine andere gültige und zulässige Bestimmung zu ersetzen, die dem Sinn und Zweck der weggefallenen Bestimmung am ehesten entspricht.</p>
+                        <p>XXVI.2.</p>   <p style="margin-left: 30px;">Nebenabreden wurden nicht getroffen bzw. wird hiermit vereinbart, dass diese mit Annahme dieser allgemeinen Geschäftsbedingungen einvernehmlich aufgehoben sind.</p>
+                        <p>XXVI.3.</p>   <p style="margin-left: 30px;">Jegliche Mitteilungen des Kunden an PAYUCA haben – sofern diese allgemeinen Geschäftsbedingungen nicht ausdrücklich etwas Anderes vorsehen – schriftlich – vorzugsweise per E-Mail zu erfolgen.</p>
+                        <p>XXVI.4.</p>   <p style="margin-left: 30px;">Erreichbarkeit:
+                                          PAYUCA GmbH<br/>
+                                          Wipplingerstraße 32/22<br/>
+                                          1010 Wien<br/>
+                                          E-Mail: office@payuca.com<br/>
+                                          <br/>
+                                          T: +43 1 307 5622<br/>
+                                          F: +43 1 307 5622 – 9<br/>
+                                          E: hello@payuca.com<br/>
+                                          <br/>
+                                          Firmenbuchnummer: FN 440762f<br/>
+                                          UID-Nummer: ATU69942315<br/>
+                                          Handelsgericht: Wien, Österreich<br/>
+                                          DVR: 4017740<br/>
+                                          <br/>
+                                          Geschäftsführung:<br/>
+                                          Andreas Lichtl<br/>
+                                          Dominik Wegmayer
+                                         </p>
+
+
 
 
 
