--- a/agb.html
+++ b/agb.html
@@ -305,7 +305,7 @@
 
                         <h3 class="m-t-lg">XXIII WIDERRUFSRECHT</h3>
                         <p>XXIII.1.</p>   <p style="margin-left: 30px;">Gemäß § 11 ff. des Fern- und Auswärtsgeschäfte-Gesetzes ist der Kunde berechtigt, vom geschlossenen Vertrag binnen 14 Kalendertagen (Datum des Aufladens des Guthaben-Kontos) zurückzutreten. Die Rücktrittsfrist beginnt mit der Bezahlung der erstmaligen Aufladung des Kontos zu laufen.</p>
-                        <p>XXIII.2.</p>   <p style="margin-left: 30px;">Sollten Sie von Ihrem Rücktrittsrecht Gebrauch machen wollen, so ist Ihr Rücktritt gegenüber der
+                        <p>XXIII.2.</p>   <p style="margin-left: 30px;">Sollten Sie von Ihrem Rücktrittsrecht Gebrauch machen wollen, so ist Ihr Rücktritt gegenüber der<br/>
                                           PAYUCA GmbH<br/>
                                           Wipplingerstraße 32/22<br/>
                                           1010 Wien<br/>
@@ -328,7 +328,7 @@
                         <p>XXVI.1.</p>   <p style="margin-left: 30px;">Der Bestand dieser allgemeinen Geschäftsbedingungen oder eines zwischen PAYUCA und dem Kunden geschlossenen Mietvertrages wird durch die Unwirksamkeit einzelner Bestimmungen nicht berührt. Eine unwirksame Bestimmung ist von den Vertragsparteien durch eine andere gültige und zulässige Bestimmung zu ersetzen, die dem Sinn und Zweck der weggefallenen Bestimmung am ehesten entspricht.</p>
                         <p>XXVI.2.</p>   <p style="margin-left: 30px;">Nebenabreden wurden nicht getroffen bzw. wird hiermit vereinbart, dass diese mit Annahme dieser allgemeinen Geschäftsbedingungen einvernehmlich aufgehoben sind.</p>
                         <p>XXVI.3.</p>   <p style="margin-left: 30px;">Jegliche Mitteilungen des Kunden an PAYUCA haben – sofern diese allgemeinen Geschäftsbedingungen nicht ausdrücklich etwas Anderes vorsehen – schriftlich – vorzugsweise per E-Mail zu erfolgen.</p>
-                        <p>XXVI.4.</p>   <p style="margin-left: 30px;">Erreichbarkeit:
+                        <p>XXVI.4.</p>   <p style="margin-left: 30px;">Erreichbarkeit:<br/>
                                           PAYUCA GmbH<br/>
                                           Wipplingerstraße 32/22<br/>
                                           1010 Wien<br/>
