--- a/agb.html
+++ b/agb.html
@@ -348,6 +348,50 @@
                                           Dominik Wegmayer
                                          </p>
 
+                      <h3 class="m-t-lg">Tarifblatt</h3>
+                      <div class="table-responsive">
+                        <table cellspacing="1" cellpadding="1" class="table table-bordered table-striped">
+                          <tbody>
+                            <thead>
+                              <tr>
+                                <th>Bezeichnung</th>
+                                <th>Punkt in AGB</th>
+                                <th>Gebühr</th>
+                              </tr>
+                            </thead>
+                              <tr>
+                                <td>PAYUCA-NFC-Chip</td>
+                                <td>V.3.1</td>
+                                <td>EUR 2,70</td>
+                              </tr>
+                              <tr>
+                                <td>Mahngebühr</td>
+                                <td>VI.7.</td>
+                                <td>EUR 10,00 + 4% Zinsen p.a. auf Forderung</td>
+                              </tr>
+                              <tr>
+                                <td>Mitgliedschaftsgebühr</td>
+                                <td>VII.1.</td>
+                                <td>EUR 2,70</td>
+                              </tr>
+                              <tr>
+                                <td>Mindestguthaben</td>
+                                <td>IX.3.</td>
+                                <td>EUR 5,00</td>
+                              </tr>
+                              <tr>
+                                <td>Konventionalstrafe</td>
+                                <td>XX.1.</td>
+                                <td>EUR 50,00</td>
+                              </tr>
+                              <tr>
+                                <td>Mietzinshöhe</td>
+                                <td></td>
+                                <td>Ist der Detailansicht der jeweiligen Garage zu entnehmen.</td>
+                              </tr>
+                          </tbody>
+                        </table>
+                      </div>
 
 
 
