--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
               <li><a class="page-scroll" page-scroll href="index.html#sogehts">So geht's</a></li>
               <li><a class="page-scroll" page-scroll href="index.html#pricing">Preis</a></li>
               <li><a class="page-scroll" page-scroll href="index.html#team">Team</a></li>
-              <li><a href="standorte.html">Standorte</a></li>
-              <li><a href="partner.html">Partner</a></li>
+              <li><a class="page-scroll" page-scroll href="standorte.html">Standorte</a></li>
+              <li><a class="page-scroll" page-scroll href="partner.html">Partner</a></li>
               <li><a class="page-scroll" page-scroll href="index.html#kontakt">Kontakt</a></li>
           </ul>
         </div>
