--- a/standorte.html
+++ b/standorte.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="rest">
 <head>
 
     <meta charset="utf-8">
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="styles/style.css">
 
 </head>
-<body class="fixed-navbar sidebar-scroll landing-page fixed-footer">
+<body class="fixed-navbar sidebar-scroll landing-page fixed-footer rest">
 
 <!-- Header -->
 <div id="header">
@@ -198,7 +198,7 @@
       </script>
     </head>
 
-    <body onload="initMap()">
+    <body onload="initMap()" class="rest">
       <div class="content hidden-sm-down">
         <div class="mapcontainer">
           <div>
