--- a/standorte.html
+++ b/standorte.html
@@ -190,7 +190,7 @@
 
 <!-- Main Wrapper -->
 <div id="wrapper">
-
+  <div class="content">
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <script async defer
@@ -209,7 +209,7 @@
     </body>
 
     </html>
-
+  </div>
 </div>
 
 <!-- Vendor scripts -->
