--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="rest">
+<html>
 <head>
 
     <meta charset="utf-8">
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="styles/style.css">
 
 </head>
-<body class="landing-page rest">
+<body class="landing-page">
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
