Navigation changes. Index page contains only IDs for the scroll option.

--- a/standorte.html
+++ b/standorte.html
@@ -40,15 +40,16 @@
               <a href="index.html"><img src="images/landing/payucaLogo.png" class="logo" alt="PAYUCA Logo" /></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a class="page-scroll" href="index.html#page-top">Home</a></li>
-                <li><a class="page-scroll" page-scroll href="index.html#sogehts">So geht's</a></li>
-                <li><a class="page-scroll" page-scroll href="index.html#pricing">Preis</a></li>
-                <li><a class="page-scroll" page-scroll href="index.html#team">Team</a></li>
-                <li class="active"><a href="standorte.html">Standorte</a></li>
-                <li><a href="partner.html">Partner</a></li>
-                <li><a class="page-scroll" page-scroll href="index.html#kontakt">Kontakt</a></li>
-            </ul>
+              <ul class="nav navbar-nav navbar-right">
+                  <li><a class="page-scroll" href="index.html">Home</a></li>
+                  <li><a class="page-scroll" page-scroll href="index.html#sogehts">So geht's</a></li>
+                  <li><a class="page-scroll" page-scroll href="index.html#pricing">Preis</a></li>
+                  <li><a class="page-scroll" page-scroll href="index.html#team">Team</a></li>
+                  <li class="active"><a class="page-scroll" page-scroll href="standorte.html">Standorte</a></li>
+                  <li><a class="page-scroll" page-scroll href="partner.html">Partner</a></li>
+                  <li><a class="page-scroll" page-scroll href="index.html#kontakt">Kontakt</a></li>
+                  <li><a href="login.html" class="navbar-brand">Log In</a></li>
+              </ul>
           </div>
       </div>
     </nav>
