--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a class="page-scroll" href="index.html#page-top">Home</a></li>
-              <li><a class="page-scroll" page-scroll href="index.html#sogehts">So geht's</a></li>
-              <li><a class="page-scroll" page-scroll href="index.html#pricing">Preis</a></li>
-              <li><a class="page-scroll" page-scroll href="index.html#team">Team</a></li>
+              <li class="active"><a class="page-scroll" href="#page-top">Home</a></li>
+              <li><a class="page-scroll" page-scroll href="#sogehts">So geht's</a></li>
+              <li><a class="page-scroll" page-scroll href="#pricing">Preis</a></li>
+              <li><a class="page-scroll" page-scroll href="#team">Team</a></li>
               <li><a class="page-scroll" page-scroll href="standorte.html">Standorte</a></li>
               <li><a class="page-scroll" page-scroll href="partner.html">Partner</a></li>
-              <li><a class="page-scroll" page-scroll href="index.html#kontakt">Kontakt</a></li>
+              <li><a class="page-scroll" page-scroll href="#kontakt">Kontakt</a></li>
+              <li><a href="login.html" class="navbar-brand">Log In</a></li>
           </ul>
         </div>
     </div>
