Favicon added to all pages.

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -9,8 +9,8 @@
     <!-- Page title -->
     <title>Datenschutz | PAYUCA GmbH</title>
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!--<link rel="shortcut icon" type="image/ico" href="favicon.ico" />-->
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
 
     <!-- Vendor styles -->
     <link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.css" />
