--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Page title -->
     <title>Home | PAYUCA GmbH</title>
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
 
     <!-- Vendor styles -->
