--- a/datenschutz.html
+++ b/datenschutz.html
@@ -53,7 +53,7 @@
     </div>
 </nav>
 
-<section id="agb" class="bg-light agb">
+<section id="datenschutz" class="bg-light agb">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
