--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Page title -->
-    <title>Log In | PAYUCA GmbH</title>
+    <title>Anmeldung | PAYUCA GmbH</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
