--- a/recovery.html
+++ b/recovery.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Page title -->
-    <title>Anmeldung | PAYUCA GmbH</title>
+    <title>Passwort-Wiederherstellung | PAYUCA GmbH</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
@@ -53,38 +53,29 @@
     </div>
 </nav>
 
-<section id="login" class="bg-light agb">
+<section id="recovery" class="bg-light agb">
     <div class="container">
       <div class="login-container">
           <div class="row">
               <div class="col-md-12">
                   <div class="text-center m-b-md">
-                      <h3>PAYUCA LOG IN</h3>
-                      <small>Smart Parking</small>
+                      <h3>Passwort-Wiederherstellung</h3>
+                      <small>PAYUCA Konto</small>
                   </div>
                   <div class="hpanel m-b-xl">
-                      <div class="panel-body">
-                              <form action="#" id="loginForm">
-                                  <div class="form-group">
-                                      <label class="control-label" for="username">E-Mail-Adresse</label>
-                                      <input type="text" placeholder="max@mustermail.com" required="" value="" name="username" id="username" class="form-control">
-                                  </div>
-                                  <div class="form-group">
-                                      <label class="control-label" for="password">Passwort</label>
-                                      <input type="password" placeholder="******" required="" value="" name="password" id="password" class="form-control">
-                                  </div>
-                                  <div class="checkbox">
-                                      <input type="checkbox" class="i-checks" checked>
-                                           Angemeldet bleiben
+                    <div class="panel-body">
+                        <p>
+                            Gib Deine E-Mail-Adresse ein und ein Passwort-Wiederherstellungslink wird Dir gesendet.
+                        </p>
+                            <form action="#" id="loginForm">
+                                <div class="form-group">
+                                    <label class="control-label" for="username">E-Mail-Adresse</label>
+                                    <input type="text" placeholder="max@mustermail.com" title="" required="" value="" name="username" id="email" class="form-control">
+                                </div>
 
-                                  </div>
-                                  <button class="btn btn-success btn-block m-t-lg">Anmelden</button>
-                                  <a class="btn btn-default btn-block m-b-md" href="#">Registrieren</a>
-                                  <center>
-                                    <a href="recovery.html" title="Password recovery">Passwort vergessen?</a>
-                                  </center>
-                              </form>
-                      </div>
+                                <button class="btn btn-success btn-block">Passwort zurücksetzen</button>
+                            </form>
+                    </div>
                   </div>
               </div>
           </div>
