Footer menu fix.

--- a/index.html
+++ b/index.html
@@ -364,16 +364,16 @@
                   </p>
                </div>
                <div class="col-md-4 text-left">
-                  <a href="index.html#page-top" class="page-scroll">
+                  <a href="#page-top" class="page-scroll" page-scroll>
                      <h4 class="footermenu">Home</h4>
                   </a>
-                  <a href="index.html#sogehts" class="page-scroll">
+                  <a href="#sogehts" class="page-scroll" page-scroll>
                      <h4 class="footermenu">So geht's</h4>
                   </a>
-                  <a href="index.html#pricing" class="page-scroll">
+                  <a href="#pricing" class="page-scroll" page-scroll>
                      <h4 class="footermenu">Preis</h4>
                   </a>
-                  <a href="index.html#team" class="page-scroll">
+                  <a href="#team" class="page-scroll" page-scroll>
                      <h4 class="footermenu">Team</h4>
                   </a>
                   <a href="standorte.html">
@@ -382,7 +382,7 @@
                   <a href="partner.html">
                      <h4 class="footermenu">Partner</h4>
                   </a>
-                  <a href="index.html#kontakt" class="page-scroll">
+                  <a href="#kontakt" class="page-scroll" page-scroll>
                      <h4 class="footermenu-last">Kontakt</h4>
                   </a>
                </div>
